# Notes

./: .gitignore  Makefile  README.md  entrypoint.sh  env-example.env  nginx.conf  pyproject.toml
core/api/: schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/customers/: handlers.py  schemas.py
core/api/v1/notes/: handlers.py  schemas.py
core/api/v1/questions/: filters.py  handlers.py  schemas.py
core/apps/common/: exceptions.py
core/apps/customers/: admin.py  apps.py  entities.py  models.py
core/apps/customers/exceptions/: codes.py  customers.py
core/apps/customers/migrations/: 0001_initial.py  0002_rename_token_customer_access_token_and_more.py  0003_rename_phone_customer_email_customer_first_name_and_more.py  0004_alter_customer_first_name_alter_customer_last_name.py  0005_alter_customer_email_alter_customer_first_name_and_more.py  0006_alter_customer_expires_in_and_more.py
core/apps/customers/services/: auth.py  codes.py  customers.py  senders.py
core/apps/notes/: admin.py  apps.py  entities.py  models.py  services.py  use_cases.py
core/apps/notes/migrations/: 0001_initial.py  0002_notelist.py  0003_alter_notelist_options.py  0004_alter_notelist_customer.py  0005_alter_note_customer_alter_notelist_customer.py
core/apps/questions/: admin.py  apps.py  containers.py
core/apps/questions/entities/: attempts.py  questions.py
core/apps/questions/exceptions/: questions.py
core/apps/questions/migrations/: 0001_initial.py  (+4 more)
core/project/: urls.py  wsgi.py
core/project/settings/: main.py
docker_compose/: app.yaml  storages.yaml
(+5 files in other folders)
